            used.  (Any such failure should now occur consistently, rather
            than appearing to be due to a non-deterministic bug.)
      \item **8
      \item **9
      \item **10
      \item **11
      \item **12
      \item **13
      \item **14
      \item **15
      \item **16
      \item **17
      \item **18
      \item **19
      \item **20
      \item **21
      \item **22
      \item **23
      \item **24
      \item **25
      \item **26
      \item **27
      \item **28
      \item **29
      \item **30
      \item **31
      \item **32
      \item **33
      \item **34
      \item **35
      \item **36
      \item **37
      \item **38
      \item **39
      \item **40
      \item **41
      \item **42
      \item **43
      \item **44
      \item **45
      \item **46
      \item **47
      \item **48
      \item **49
      \item **50
    }
  }

  \subsection{PERFORMANCE IMPROVEMENTS}{
    \itemize{
      \item Some speedup has been obtained by using new internal C functions 
            for performing exact or partial string matches in the interpreter.
      \item **2
      \item **3
      \item **4
      \item **5
      \item **6
      \item Various inlined procedures where changed to be more efficient, 
            and "length" was un-inlined, since it's fairly long.  Numerous
            occurences of for (i = 0; i < length(...); i++) were replaced
            by code that doesn't call length numerous times.
      \item **8
      \item Global constants R_ScalarLogicalNA, R_ScalarLogicalTRUE, and
            R_ScalarLogicalFALSE have been created, and the interpreter's
            ScalarLogical function now returns one of these rather than
            allocate new space for every logical value. 

            To avoid problems with an external C or Fortran routine
            changing one of these values (with an incorrect
            specification of DUP=FALSE even though it modifies the